--- a/css/formulario.css
+++ b/css/formulario.css
@@ -13,9 +13,6 @@
   color: #fff;
 }
 
-
-
-
 .imgg{ 
   width: 6rem;
   margin-bottom: 6px;
@@ -28,3 +25,12 @@
   border: 1px solid #808080;
   color: #fff;
 }
+
+
+#fomuuu input{animation:input 1s; } @keyframes input{ 0%{transform:scale(.5)} 100%{transform:scale(1)} }
+
+#fomuuu label{animation:label 1s; } @keyframes label{ 0%{transform:scale(.5)} 100%{transform:scale(1)} }
+
+#fomuuu textarea{animation:textarea 1s; } @keyframes textarea{ 0%{transform:scale(.5)} 100%{transform:scale(1)} }
+
+#fomuuu button{animation:button 1s; } @keyframes button{ 0%{transform:scale(.5)} 100%{transform:scale(1)} }
