--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url(./footer.css);
 @import url(./cards.css);
 @import url(./formulario.css);
+@import url(./clientes.css);
 
 
 #bodyy{
@@ -11,7 +12,7 @@
 }
 
 #tituloo h2 { 
-  margin-top: 80px; 
+  margin-top: 50px; 
   font-size: 35px;
   font-weight: 700;
   font-family: 'Noto Sans JP', sans-serif;
