--- a/css/clientes.css
+++ b/css/clientes.css
@@ -1,4 +1,4 @@
-.galeria img {
+.galeriaa img {
   max-width: 80%;
   height: auto;
   max-height: 110px;
@@ -6,7 +6,7 @@
   margin: 0 auto;
 }
 
-.galeria #imgrevelde { 
+.galeriaa #imgrevelde { 
   margin-top: 20px;
 }
 
