aa cositas nuevas

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import url(./cards.css);
 @import url(./formulario.css);
 @import url(./clientes.css);
+@import url(./principal.css);s
 
 
 #bodyy{
