--- a/css/principal.css
+++ b/css/principal.css
@@ -1,3 +1,96 @@
+#bodyy{
+  margin: 0;
+  padding: 0;
+  background-color: #FFE8CD;
+}
+
+#tituloo h2 { 
+  margin-top: 50px; 
+  font-size: 35px;
+  font-weight: 700;
+  font-family: 'Noto Sans JP', sans-serif;
+}
+#tituloo p { 
+  color: black;
+  font-family: 'Heebo', sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.navbar { 
+  background-color: #FFBA6A;
+}
+.navbar img { 
+  width: 3.5rem;
+  height: 3.5rem;
+}
+
+.menucito li a  { 
+  color: whitesmoke;
+  font-size: 15px;
+  text-transform: uppercase;
+}
+
+@media screen and (max-width: 768px) {
+  .menucito ul {
+    text-align: center;
+  }
+  .menucito li a  { 
+    text-align: center;
+  }
+}
+
+/* Estilos para teléfonos móviles */
+
+@media screen and (max-width: 480px) {
+  .menucito ul {
+    text-align: center;
+  }
+  .menucito li a  { 
+    text-align: center;
+  }
+}
+
+.footer {
+  background-color: #504f4f;
+  color: white;
+  width: 100%;
+  height: 10rem;
+}
+
+.footer a {
+  color: white;
+}
+
+.social-icons {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+
+.social-icons li {
+  margin-right: 10px;
+}
+
+.social-icons img {
+  margin-top: 42px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+@media screen and (max-width: 480px) {
+  .social-icons img {
+    margin-top: 30px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  }
+}
+.social-icons{animation:social-icons 1s; } @keyframes social-icons{ 0%{transform:scale(.5)} 100%{transform:scale(1)} }
+
 
 .hero-section {
   background-image: url('../img/principal/bienvenida1.jpg');
@@ -6,6 +99,7 @@
   text-align: center;
   padding: 100px 0;
   position: relative;
+  height: 20rem;
 }
 
 .hero-section::before{
@@ -31,4 +125,103 @@
   font-size: 1.5em;
   margin-top: 20px;
   font-family: 'Heebo', sans-serif;
+}
+
+
+/* Estilos para las cards */
+.card {
+  width: 100%;
+  border-radius: 20px 20px 20px 20px;
+  overflow: hidden;
+  margin: 0;
+}
+.card img { 
+  height: 450px;
+}
+.img-fluid img {
+  border-radius: 20px 20px 20px 20px;
+}
+
+.card-body {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 20%;
+  overflow: hidden;
+  transition: 0.2s;
+  border-radius: 5px 5px 20px 20px;
+}
+
+.card-body:hover {
+  height: 100%;
+  transition: 0.7s;
+  color: white;
+  border-radius: 5px 5px 5px 5px;
+}
+
+#titulo {
+  font-family: 'K2D', sans-serif;
+  text-align: center;
+  font-size: 30px;
+  font-weight: 400;
+  padding: 5px;
+  margin-bottom: 10px;
+  color: white;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+#textoo {
+  font-family: 'Montserrat', sans-serif;
+  text-align: left;
+  font-size: 18px;
+}
+
+#rebelde {
+  font-family: 'Montserrat', sans-serif;
+  text-align: left;
+  font-size: 18px;
+  list-style-type: none;
+}
+
+/* Responsive de las cards */
+@media (max-width: 768px) {
+  .card-body {
+    height: 60px;
+  }
+
+  .card-body {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    height: 25%;
+    overflow: hidden;
+    transition: 0.2s;
+    border-radius: 5px 5px 20px 20px;
+  }
+
+  #titulo {
+    font-family: 'Noto Sans JP', sans-serif;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 400;
+    padding: 5px;
+    margin-bottom: 10px;
+    color: white;
+    margin-top: 25px;
+    margin-bottom: 25px;
+  }
+
+  #textoo {
+    font-family: 'Montserrat', sans-serif;
+    text-align: left;
+    font-size: 18px;
+  }
+
+  #rebelde {
+    font-family: 'Montserrat', sans-serif;
+    text-align: left;
+    font-size: 18px;
+    list-style-type: none;
+  }
 }
