se eliminar la imagen cuando esta responsive mobil

--- a/css/preguntas.css
+++ b/css/preguntas.css
@@ -47,11 +47,8 @@
 /* Estilo adicional para pantallas pequeñas */
 @media (max-width: 767px) {
   #imagen {
-    margin-top: 50px;
+    display: none;
   }
-
-  .col-md-6 {
-    margin-bottom: 20px;
-  }
+  
 }
 
