--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
 @import url(./preguntas.css);
 @import url(./servicios.css);
 
-
 #bodyy{
   margin: 0;
   padding: 0;
@@ -19,10 +18,21 @@
   font-weight: 700;
   font-family: 'Noto Sans JP', sans-serif;
 }
+#tituloo h2 { 
+  margin-top: 50px; 
+  font-size: 35px;
+  font-weight: 700;
+  font-family: 'Noto Sans JP', sans-serif;
+}
+
 #tituloo p { 
   color: black;
   font-family: 'Heebo', sans-serif;
   font-size: 16px;
   font-weight: bold;
   text-align: center;
+}
+
+.left-align {
+  text-align: left;
 }
