--- a/css/navbar.css
+++ b/css/navbar.css
@@ -6,12 +6,21 @@
   height: 3.5rem;
 }
 
-.menucito li a  { 
-  color: whitesmoke;
+.menucito a  { 
+  color: #4F4A45!important;
   font-size: 15px;
   text-transform: uppercase;
+  font-family: 'Heebo', sans-serif;
+  font-weight: 700;
 }
 
+.menucito a:hover  { 
+  color: #FF6C22 !important;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-family: 'Heebo', sans-serif;
+  font-weight: 700;
+}
 @media screen and (max-width: 768px) {
   .menucito ul {
     text-align: center;
