--- a/css/principal.css
+++ b/css/principal.css
@@ -26,12 +26,21 @@
   height: 3.5rem;
 }
 
-.menucito li a  { 
-  color: whitesmoke;
+.menucito a  { 
+  color: #4F4A45!important;
   font-size: 15px;
   text-transform: uppercase;
+  font-family: 'Heebo', sans-serif;
+  font-weight: 700;
 }
 
+.menucito a:hover  { 
+  color: #FF6C22 !important;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-family: 'Heebo', sans-serif;
+  font-weight: 700;
+}
 @media screen and (max-width: 768px) {
   .menucito ul {
     text-align: center;
@@ -51,45 +60,6 @@
     text-align: center;
   }
 }
-
-.footer {
-  background-color: #504f4f;
-  color: white;
-  width: 100%;
-  height: 10rem;
-}
-
-.footer a {
-  color: white;
-}
-
-.social-icons {
-  list-style: none;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-}
-
-.social-icons li {
-  margin-right: 10px;
-}
-
-.social-icons img {
-  margin-top: 42px;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
-
-@media screen and (max-width: 480px) {
-  .social-icons img {
-    margin-top: 30px;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-  }
-}
-.social-icons{animation:social-icons 1s; } @keyframes social-icons{ 0%{transform:scale(.5)} 100%{transform:scale(1)} }
 
 
 .hero-section {
@@ -223,5 +193,51 @@
     text-align: left;
     font-size: 18px;
     list-style-type: none;
+  }
+}
+
+
+.footer {
+  background-color: #504f4f;
+  color: white;
+  width: 100%;
+  height: 11rem;
+}
+
+.footer a {
+  color: white;
+}
+
+
+.social-icons {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+
+.social-icons li {
+  margin-right: 10px;
+}
+
+#face, #linkedin {
+  margin-top: 43px;
+  width: 60px;
+  height: 60px;
+}
+
+#twitter {
+  margin-top: 50px;
+  width: 43px;
+  height: 43px;
+}
+
+@media (max-width: 768px) {
+  .social-icons {
+    align-items: center; 
+  }
+
+  #face, #linkedin, #twitter {
+    margin-top: 10px; 
   }
 }
