--- a/css/servicios.css
+++ b/css/servicios.css
@@ -6,12 +6,21 @@
   height: 3.5rem;
 }
 
-.menucito li a  { 
-  color: whitesmoke;
+.menucito a  { 
+  color: #4F4A45!important;
   font-size: 15px;
   text-transform: uppercase;
+  font-family: 'Heebo', sans-serif;
+  font-weight: 700;
 }
 
+.menucito a:hover  { 
+  color: #FF6C22 !important;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-family: 'Heebo', sans-serif;
+  font-weight: 700;
+}
 @media screen and (max-width: 768px) {
   .menucito ul {
     text-align: center;
@@ -31,11 +40,12 @@
     text-align: center;
   }
 }
+
 .footer {
   background-color: #504f4f;
   color: white;
   width: 100%;
-  height: 10rem;
+  height: 11rem;
 }
 
 .footer a {
@@ -53,21 +63,31 @@
   margin-right: 10px;
 }
 
-.social-icons img {
-  margin-top: 42px;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
+#face, #linkedin {
+  width: 60px;
+  height: 60px;
 }
 
-@media screen and (max-width: 480px) {
-  .social-icons img {
-    margin-top: 30px;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
+#twitter {
+  margin-top: 50px;
+  width: 43px;
+  height: 43px;
+}
+
+
+@media (max-width: 768px) {
+  .social-icons {
+    align-items: center;
+  }
+
+  #face, #linkedin, #twitter {
+    margin-top: 10px;
   }
 }
+
+
+
+
 
 #bodyy{
   margin: 0;
