--- a/css/servicios.css
+++ b/css/servicios.css
@@ -1,51 +1,60 @@
-.navbar { 
+#bodyy {
+  margin: 0;
+  padding: 0;
+  background-color: #FFE8CD;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+}
+
+.navbar {
   background-color: #FFBA6A;
 }
-.navbar img { 
+
+.navbar img {
   width: 3.5rem;
   height: 3.5rem;
 }
 
-.menucito a  { 
-  color: #4F4A45!important;
-  font-size: 15px;
+.menucito a {
+  font-weight: 600;
+  color: #4F4A45 !important;
+  font-size: 13px;
   text-transform: uppercase;
-  font-family: 'Heebo', sans-serif;
-  font-weight: 700;
+  font-family: 'Noto Sans JP', sans-serif;
 }
 
-.menucito a:hover  { 
+.menucito a:hover {
   color: #FF6C22 !important;
-  font-size: 15px;
-  text-transform: uppercase;
+}
+
+#tituloo h2 {
+  font-size: 35px;
+  font-weight: 600;
+  font-family: 'Noto Sans JP', sans-serif;
+}
+
+#tituloo p {
+  color: black;
   font-family: 'Heebo', sans-serif;
-  font-weight: 700;
-}
-@media screen and (max-width: 768px) {
-  .menucito ul {
-    text-align: center;
-  }
-  .menucito li a  { 
-    text-align: center;
-  }
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
 }
 
-/* Estilos para teléfonos móviles */
-
-@media screen and (max-width: 480px) {
-  .menucito ul {
-    text-align: center;
-  }
-  .menucito li a  { 
-    text-align: center;
-  }
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  padding: 15px;
+  border-radius: 5px;
 }
 
 .footer {
   background-color: #504f4f;
   color: white;
-  width: 100%;
-  height: 11rem;
+  padding: 20px 0;
+  margin-top: auto;
 }
 
 .footer a {
@@ -63,54 +72,42 @@
   margin-right: 10px;
 }
 
-#face, #linkedin {
+#face,
+#linkedin {
+  margin-top: 10px;
   width: 60px;
   height: 60px;
 }
 
 #twitter {
-  margin-top: 50px;
+  margin-top: 20px;
   width: 43px;
   height: 43px;
 }
 
+@media screen and (max-width: 768px) {
+  .menucito ul {
+    text-align: center;
+  }
 
-@media (max-width: 768px) {
+  .menucito li a {
+    text-align: center;
+  }
+
   .social-icons {
     align-items: center;
   }
 
-  #face, #linkedin, #twitter {
+  #face,
+  #linkedin,
+  #twitter {
     margin-top: 10px;
   }
 }
 
-
-
-
-
-#bodyy{
-  margin: 0;
-  padding: 0;
-  background-color: #FFE8CD;
-}
-
-#tituloo h2 { 
-  margin-top: 50px; 
-  font-size: 35px;
-  font-weight: 700;
-  font-family: 'Noto Sans JP', sans-serif;
-}
-#tituloo p { 
-  color: black;
-  font-family: 'Heebo', sans-serif;
-  font-size: 16px;
-  font-weight: bold;
-  text-align: center;
-}
-.carousel-caption {
-  background-color: rgba(0, 0, 0, 0.5); /* Fondo oscuro con transparencia */
-  color: #fff; /* Texto en blanco */
-  padding: 15px; /* Espaciado interno */
-  border-radius: 5px; /* Bordes redondeados */
+@media screen and (max-width: 480px) {
+  .menucito ul,
+  .menucito li a {
+    text-align: center;
+  }
 }
