--- a/css/formulario.css
+++ b/css/formulario.css
@@ -1,3 +1,48 @@
+:root {
+  --color-background: #FFE8CD;
+  --color-text: #4F4A45;
+  --color-accent: #FF6C22;
+  --font-family-primary: 'Noto Sans JP', sans-serif;
+  --font-family-secondary: 'Heebo', sans-serif;
+}
+
+#bodyy { 
+  background-color: #FFE8CD;
+  
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #FFE8CD;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.navbar {
+  background-color: #FFBA6A;
+}
+
+.navbar img {
+  width: 3.5rem;
+  height: 3.5rem;
+}
+
+.navbar-nav .nav-link {
+  color: var(--color-text);
+  font-size: 13px;
+  text-transform: uppercase;
+  font-family: var(--font-family-primary);
+  font-weight: 600;
+  transition: color 0.3s;
+}
+
+.menucito a:hover {
+  color: var(--color-accent);
+}
+
 #fomuuu  {
   background-color: #D9D9D9;
   padding: 20px;
@@ -38,6 +83,63 @@
   font-size: 16px;
   font-weight: bold;
   text-align: center;
+}
+
+
+.footer {
+  background-color: #504f4f;
+  color: white;
+  padding: 20px 0;
+  margin-top: auto; 
+}
+
+.footer a {
+  color: white;
+}
+
+.social-icons {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+
+.social-icons li {
+  margin-right: 10px;
+}
+
+#face,
+#linkedin,
+#git,#twitter {
+  margin-top: 10px;
+  width: 50px;
+  height: 50px;
+}
+
+@media screen and (max-width: 768px) {
+  .menucito ul,
+  .menucito li a {
+    text-align: center;
+  }
+  .social-icons {
+    align-items: center; 
+  }
+
+  #face,
+  #linkedin,
+  #git,#twitter {
+    margin-top: 10px; 
+  }
+
+  #titulo {
+    font-family: var(--font-family-primary);
+    text-align: center;
+    font-size: 30px;
+    font-weight: 400;
+    padding: 5px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+  }
 }
 
 
