--- a/css/index.css
+++ b/css/index.css
@@ -125,11 +125,12 @@
   margin-bottom: 10px;
 }
 
+
 .footer {
   background-color: #504f4f;
   color: white;
-  width: 100%;
-  height: 11rem;
+  padding: 20px 0;
+  margin-top: auto; 
 }
 
 .footer a {
@@ -147,16 +148,12 @@
   margin-right: 10px;
 }
 
-#face, #linkedin {
-  margin-top: 43px;
-  width: 60px;
-  height: 60px;
-}
-
-#twitter {
-  margin-top: 50px;
-  width: 43px;
-  height: 43px;
+#face,
+#linkedin,
+#git,#twitter {
+  margin-top: 10px;
+  width: 50px;
+  height: 50px;
 }
 
 @media screen and (max-width: 768px) {
@@ -168,7 +165,9 @@
     align-items: center; 
   }
 
-  #face, #linkedin, #twitter {
+  #face,
+  #linkedin,
+  #git,#twitter {
     margin-top: 10px; 
   }
 
