--- a/css/trabajos.css
+++ b/css/trabajos.css
@@ -81,8 +81,8 @@
 .footer {
   background-color: #504f4f;
   color: white;
-  width: 100%;
-  height: 11rem;
+  padding: 20px 0;
+  margin-top: auto; 
 }
 
 .footer a {
@@ -100,17 +100,14 @@
   margin-right: 10px;
 }
 
-#face, #linkedin {
-  margin-top: 43px;
-  width: 60px;
-  height: 60px;
+#face,
+#linkedin,
+#git,#twitter {
+  margin-top: 10px;
+  width: 50px;
+  height: 50px;
 }
 
-#twitter {
-  margin-top: 50px;
-  width: 43px;
-  height: 43px;
-}
 
 @media (max-width: 768px) {
   .menucito ul,
@@ -122,7 +119,7 @@
     align-items: center;
   }
 
-  #face, #linkedin, #twitter {
+  #face, #linkedin, #twitter, #git {
     margin-top: 10px;
   }
 }
