--- a/css/historial.css
+++ b/css/historial.css
@@ -106,17 +106,15 @@
   margin-right: 10px;
 }
 
-#face, #linkedin {
-  margin-top: 43px;
-  width: 60px;
-  height: 60px;
+#face,
+#linkedin,
+#git,#twitter,#git {
+  margin-top: 10px;
+  width: 50px;
+  height: 50px;
 }
 
-#twitter {
-  margin-top: 50px;
-  width: 43px;
-  height: 43px;
-}
+
 
 /* Estilos de las barras de progreso */
 .title {
