--- a/css/historial.css
+++ b/css/historial.css
@@ -1,8 +1,8 @@
 :root {
-  --color-background: #FFE8CD;
-  --color-navbar: #FFBA6A;
-  --color-text: #4F4A45;
-  --color-highlight: #FF6C22;
+  --color-background: #ffe8cd;
+  --color-navbar: #ffba6a;
+  --color-text: #4f4a45;
+  --color-highlight: #ff6c22;
   --font-family-primary: 'Noto Sans JP', sans-serif;
   --font-family-secondary: 'Heebo', sans-serif;
 }
@@ -12,7 +12,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #FFE8CD;
+  background-color: #ffe8cd;
 }
 
 /* Estilos de la barra de navegación */
@@ -55,8 +55,6 @@
   font-weight: bold;
 }
 
-
-
 @media screen and (max-width: 768px) {
   /* Estilos para dispositivos móviles (tabletas y teléfonos) */
   .menucito ul,
@@ -65,11 +63,13 @@
   }
 
   .social-icons {
-    align-items: center; 
+    align-items: center;
   }
 
-  #face, #linkedin, #twitter {
-    margin-top: 10px; 
+  #face,
+  #linkedin,
+  #twitter {
+    margin-top: 10px;
   }
 
   #titulo {
@@ -108,13 +108,13 @@
 
 #face,
 #linkedin,
-#git,#twitter,#git {
+#git,
+#twitter,
+#git {
   margin-top: 10px;
   width: 50px;
   height: 50px;
 }
-
-
 
 /* Estilos de las barras de progreso */
 .title {
@@ -126,7 +126,7 @@
 }
 
 .progress-bar {
-  background-color: #FFA333;
+  background-color: #ffa333;
 }
 
 .ten-percent {
@@ -146,6 +146,7 @@
   justify-content: space-between;
 }
 .numeritos2 {
+  margin-top: 10px;
   display: flex;
   justify-content: space-between;
 }
