--- a/css/preguntas.css
+++ b/css/preguntas.css
@@ -43,7 +43,7 @@
     font-weight: 600;
 
 }
-h6 {
+#herooo h6 {
   font-family: 'Heebo', sans-serif;
   color: var(--color-text);
   font-size: 18px;
