--- a/css/trabajos.css
+++ b/css/trabajos.css
@@ -13,6 +13,9 @@
   padding: 0;
   box-sizing: border-box;
   background-color: var(--color-background);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .navbar {
